fix offscreen css
had changed a tag without changing the corresponding css
also, delete the element later
fixes #1648

--- a/htdocs/css/bootstrap-rcloud-tweaks.css
+++ b/htdocs/css/bootstrap-rcloud-tweaks.css
@@ -175,7 +175,7 @@ div.panel-heading:hover {
     top: 0;
 }
 
-div.offscreen {
+pre.offscreen {
     position: absolute;
     right: -100000;
 }
